css/index.css
/* ... */
@font-face {
  font-family: 'MyDM-Sans';
  src: local("DM Sans Medium Italic"), local("DM_Sans_Medium_Italic"), local("dm-sans-medium-italic");
  src: url("../fonts/dm_sans_500_italic.woff2");
  src: url("../fonts/dm_sans_500_italic.woff");
  font-style: italic;
  font-weight: 500; }

@font-face {
  font-family: 'MyDM-Sans';
  src: local("DM Sans Medium"), local("DM_Sans_Medium"), local("dm-sans-medium");
  src: url("../fonts/dm_sans_500.woff2");
  src: url("../fonts/dm_sans_500.woff");
  font-weight: 500; }

@font-face {
  font-family: 'MyDM-Sans';
  src: local("DM Sans Bold"), local("DM_Sans_Bold"), local("dm-sans-bold");
  src: url("../fonts/dm_sans_700.woff2");
  src: url("../fonts/dm_sans_700.woff");
  font-weight: 700; }

@font-face {
  font-family: 'MyDM-Sans';
  src: local("DM Sans Bold Italic"), local("DM_Sans_Bold_Italic"), local("dm-sans-bold-italic");
  src: url("../fonts/dm_sans_700_italic.woff2");
  src: url("../fonts/dm_sans_700_italic.woff");
  font-style: italic;
  font-weight: 700; }

body {
  font-family: "MyDM-Sans", Arial, Helvetica, sans-serif;
  margin: auto;
  max-width: 1440px;
  background: rgba(67, 76, 204, 0.05); }

* {
  line-height: 32px; }

button,
.prev,
.next {
  cursor: pointer; }

ul {
  list-style: none;
  padding: 0;
  margin: 0; }

a {
  text-decoration: none; }

h1,
h2,
h3,
time {
  font-family: "MyDM-Serif", serif;
  font-weight: 400; }

.section_heading {
  display: none; }

section {
  padding-left: 14px;
  padding-right: 14px; }

@media (min-width: 1200px) {
  section {
    padding-left: 135px;
    padding-right: 135px; } }

.masthead {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #434CCC;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 14px;
  padding-right: 14px; }

.masthead_heading {
  margin: 0; }

.masthead_heading-title {
  font-size: 20px;
  color: #FFFFFF;
  text-transform: uppercase; }

@media (min-width: 300px) {
  .masthead_heading-title {
    font-size: 24px; } }

@media (min-width: 1200px) {
  .masthead {
    padding-left: 135px;
    padding-right: 135px; }
  .masthead_heading-title {
    font-size: 40px; } }

.navigation {
  position: relative; }

.show-menu {
  position: absolute; }

.navigation_list {
  display: none;
  top: -37px;
  right: -14px;
  line-height: 24px;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  background-color: #2b0ba0;
  border-bottom-left-radius: 24px;
  max-width: 400px; }

.navigation_list-item {
  font-weight: 700;
  border-block-end: 1px solid #ffffff; }

.navigation_link {
  color: #ffffff; }

.navigation_list-item:hover {
  border-block-end: 1px solid chartreuse; }

.navigation_link:hover {
  color: chartreuse; }

.navigation_link,
.navigation_list-item,
.navigation_list-item:hover,
.navigation_link:hover {
  transition: all ease-in 0.2s; }

.menu {
  background-image: url("../images/icon_menu.svg");
  width: 20px;
  height: 14px;
  display: block;
  background-size: cover;
  text-indent: -9999px;
  cursor: pointer; }

.show-menu {
  top: -100%; }

body > [type="checkbox"]:checked ~ header .navigation_list {
  display: block;
  position: absolute; }

body > [type="checkbox"]:checked ~ header .menu {
  background-image: none;
  position: fixed;
  top: 0;
  right: 0;
  background-color: rgba(5, 5, 5, 0.5);
  width: 100vw;
  height: 100vh; }

@media (min-width: 640px), (min-width: 1200px) {
  .navigation_list,
  body > [type="checkbox"]:checked ~ header .navigation_list {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: unset;
    background-image: none;
    height: 100%;
    width: 324px;
    position: unset;
    max-width: 100%;
    transform: none; }
  .navigation_list-item:hover {
    border-block-end: none; }
  .navigation_list-item {
    display: block;
    border: none; }
  .show-menu,
  .menu {
    display: none; } }

.section_details-content {
  padding-top: 31px;
  padding-right: 14; }

.image_list,
.photo_information-list {
  display: grid; }

@media (min-width: 1200px) {
  .details_content-header,
  .details_content-figure-picture,
  .photo_information-list,
  .details_content-figure-picture active-picture,
  .details_content-summary-article {
    padding-right: 0; }
  .container {
    display: flex;
    justify-content: space-between; }
  .section_details-content {
    padding-right: 135px; } }

.section_newsletter {
  background: #ffdd78;
  padding-top: 63px;
  padding-bottom: 54px; }

.article_header-link {
  color: #000000;
  font-size: 16px;
  font-weight: normal;
  text-transform: uppercase; }

.newsletter_article-title {
  font-size: 40px;
  line-height: 48px; }

@media (min-width: 300px) {
  .article_header-link {
    font-size: 14px; }
  .newsletter_article-title {
    font-size: 38px; } }

@media (min-width: 1200px) {
  .section_newsletter {
    padding-top: 79px;
    padding-bottom: 104px; }
  .newsletter_article {
    display: flex;
    justify-content: space-between; }
  .newsletter_article-header {
    max-width: 382px; }
  .newsletter_article-title {
    font-size: 52px;
    line-height: 64px; } }

.site_footer {
  background: #ffffff; }

.site_footer-about,
.other_works,
.site_footer_navigation-list,
.information {
  padding-left: 14px;
  padding-right: 14px; }

.information,
.website-information,
.other_works-link,
.site_footer_navigation-list-item .list_item-link {
  color: rgba(0, 0, 0, 0.5); }

.other_works-list-item,
.website-information,
.site_footer_navigation-list,
.information {
  line-height: 24px; }

.other_works-link,
.other_works-details,
.share_link-list {
  display: flex; }

.site_footer-about {
  padding-top: 76px;
  padding-bottom: 79px; }

.site_footer-heading,
.website-information,
.information {
  margin: 0; }

.site_footer-title,
.site_footer_navigation-list-item .active,
.other_works-date {
  color: #000000; }

.site_footer-title {
  font-size: 20px;
  text-transform: uppercase; }
/* ... */

